RESOLVED FIXED314464
[Cocoa] YouTube caption button flickers and spins main thread at 100%
https://bugs.webkit.org/show_bug.cgi?id=314464
Summary [Cocoa] YouTube caption button flickers and spins main thread at 100%
Jer Noble
Reported 2026-05-08 22:30:19 PDT
[Cocoa] YouTube caption button flickers and spins main thread at 100%
Attachments
Jer Noble
Comment 1 2026-05-08 22:30:21 PDT
Jer Noble
Comment 2 2026-05-08 22:35:44 PDT
EWS
Comment 3 2026-05-09 09:45:12 PDT
Committed 312952@main (f98aa5dda908): <https://commits.webkit.org/312952@main> Reviewed commits have been landed. Closing PR #64597 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.